<html>
  <head>
    <style type='text/css'>
      a            { color:#a0a0e0 }
      div.title    { 
          color:#C0F0C0; 
          font-size:1.2em; 
          font-weight:bold; 
          margin-top:1em; 
          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 2.1
  % Version 2.1
  _ 2013-08-15
    * The heading bug in the C337 panel is movable
    * Bug fixing: The oil pressure in the single engine panel is now correct
    * Bug fixing: screens with a 4/3 aspect ratio are now correct.
$ 2.0
  % Version 2.0
  _ 2013-05-18
    ! <b>YOU MUST UPDATE ANDATLAS.XML TO THE LAST VERSION</b>
    * Show changelog dialog (this message!)
    * Ads to have some revenue (sorry!)
    * New instruments: altitude radar, HSI, RMI, magnets and starter.
    * New panel: Cessna 337 Skymaster
    * New panel: Comms panel
    * Single engine panel: you can configure some of the instruments
    * Speed improvements on all surfaces
$ 1.5
  % Version 1.5
  _ 2012-05-06
    ! <b>YOU MUST UPDATE ANDATLAS.XML TO THE LAST VERSION</b>
    * Calibrate instruments and controls using the touch screen: NAV1, NAV2, altimeter and lights.
$ 1.4
  % Version 1.4
  _ 2012-04-29
  * New panel: Cessna 172
  * Speed and memory improvements: chooses images according to the device's capabilities.
$ END_OF_CHANGE_LOG
  </body>
</html>