@@ -21,10 +21,12 @@
   <body>
 $ 2.1
   % Version 2.1
-  _ 2013-08-15
+  _ 2013-08-22
     * The heading bug in the C337 panel is movable
     * Bug fixing: The oil pressure in the single engine panel is now correct
+    * Bug fixing: the manifold pressure in the single engine panel is now correct
     * Bug fixing: screens with a 4/3 aspect ratio are now correct.
+    * Allow alternative starter on some aircrafts
 $ 2.0
   % Version 2.0
   _ 2013-05-18
